# house_climate

./: .gitignore  Dockerfile.airflow  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_airflow.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
dags/: etl_dag.py  etl_dag_2.py  tado_etl_dag.py
dags/files/: tado_zone10_2022-12-05.json  tado_zone10_2022-12-05_climate.csv  tado_zone10_2022-12-05_days.csv  tado_zone10_2022-12-07.json  tado_zone10_2022-12-08.json
dags/tasks/: common.py  extract.py  load.py  transform.py  validate.py
dags/tasks/cli/: extract.py  load.py  transform.py  validate.py
dags/tasks/helpers/: common.py  data_models.py  exceptions.py  logs.py  tado_data_models.py
dags/tasks/sql_queries/: create_tables.sql  insert_call_for_heat.sql  insert_days.sql  insert_interior.sql  insert_weather.sql  insert_weather_test.sql
dags/tasks/tests/: tado_api_response.json  tado_api_response_partial.json  test_etl.py  test_transform.py
docker/airflow/: Dockerfile  requirements.txt
docker/airflow_docker_operator/: Dockerfile  requirements.txt
notebooks/: 01-load_and_prepare.ipynb  02-feature_extraction.ipynb  03-exploration.ipynb
scripts/: set_env.sh
scripts/sql_queries/: test.sql
src/house_climate/data/: add_features.py  make_dataset.py  preprocess.py
