[build-system]
requires= ["setuptools >= 61.0.0", "setuptools_scm[toml]>=7.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "house_climate"
description = "Packaged code for house_climate project.  Analysing Tado Smart heating API data ingested using Airflow"
readme = "README.md"
requires-python = ">=3.9.13"
dynamic = ["version"]
dependencies = [
    "pyarrow"
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src", "dags"]
include = ["house_climate", "tasks"]
exclude = [
    "*.json"
]
namespaces = false

[tool.pytest.ini_options]
markers = [
    "extract",
    "validate",
    "transform",
    "load",
]
addopts = "-o log_cli=true"
testpaths = [
    "dags"
]